@@ -1,3 +1,14 @@
+2013-02-20  Ramon Casero  <rcasero@gmail.com>
+
+	* Add matlab/ThirdPartyToolbox/gplot3d.m:
+
+	- Plot graph, as in "graph theory". This is a modification of
+	MATLAB's GPLOT function for vertices in 3D.
+
+	Downloaded from
+
+	http://www.csse.uwa.edu.au/~pk/research/matlabfns/Shapes/gplot3d.m
+
 2013-02-19  Ramon Casero  <rcasero@gmail.com>
 
 	* cpp/src/Resize3DImage.cxx: (v0.2.1)
